--- a/training/pipeline.config
+++ b/training/pipeline.config
@@ -1,4 +1,4 @@
-# SSD with Mobilenet v1, configured for the Raccoon dataset.
+# SSD with Mobilenet v1
 # Users should configure the fine_tune_checkpoint field in the train config as
 # well as the label_map_path and input_path fields in the train_input_reader and
 # eval_input_reader. Search for "${YOUR_GCS_BUCKET}" to find the fields that
@@ -121,7 +121,7 @@ model {
         iou_threshold: 0.99
         loss_type: CLASSIFICATION
         max_negatives_per_positive: 3
-        min_negatives_per_image: 0
+        min_negatives_per_image: 3
       }
       classification_weight: 1.0
       localization_weight: 1.0
@@ -131,8 +131,8 @@ model {
       batch_non_max_suppression {
         score_threshold: 1e-8
         iou_threshold: 0.6
-        max_detections_per_class: 100
-        max_total_detections: 100
+        max_detections_per_class: 6
+        max_total_detections: 6
       }
       score_converter: SIGMOID
     }
@@ -155,8 +155,8 @@ train_config: {
       epsilon: 1.0
     }
   }
-  fine_tune_checkpoint: "ssd_mobilenet_v1_coco_11_06_2017/model.ckpt"
-  num_steps: 100000
+  fine_tune_checkpoint: "gs://tfod/data/model.ckpt"
+  num_steps: 200000
   from_detection_checkpoint: true
   data_augmentation_options {
     random_horizontal_flip {}
@@ -164,28 +164,25 @@ train_config: {
   data_augmentation_options {
     ssd_random_crop {}
   }
-  data_augmentation_options {
-    random_black_patches {}
-  } 
     
 }
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "/home/sha_maayan/busProject/all.record"
+    input_path: "gs://tfod/data/train.record"
   }
-  label_map_path: "/home/sha_maayan/busProject/training/object-detection.pbtxt"
+  label_map_path: "gs://tfod/data/object-detection.pbtxt"
 }
 
 eval_config: {
-  num_examples: 12
+  num_examples: 8000
 }
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "/home/sha_maayan/busProject/all.record"
+    input_path: "gs://tfod/data/test.record"
   }
-  label_map_path: "/home/sha_maayan/busProject/training/object-detection.pbtxt"
+  label_map_path: "gs://tfod/data/object-detection.pbtxt"
   shuffle: false
   num_readers: 1
 }
