Color detection experimenting
also, minor change in the preprocess_images script.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 **/*.zip*
 **/*.JPG
 
+# Ignore TFrecords dir
+TFrecords/*
+
+
 # Created by https://www.gitignore.io/api/python,windows
 
 ### Python ###
